samples/_failures_safe/1761494809_591574_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fb53da2.c: In function ‘generate_report’:
./samples/SAFE/__tmp_2fb53da2.c:144:12: error: missing terminating " character
  144 |     printf("Errors
      |            ^~~~~~~
./samples/SAFE/__tmp_2fb53da2.c:144:5: error: expected expression at end of input
  144 |     printf("Errors
      |     ^~~~~~
./samples/SAFE/__tmp_2fb53da2.c:144:5: error: expected declaration or statement at end of input
